--- a/package.json
+++ b/package.json
@@ -9,22 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "@ffmpeg/ffmpeg": "^0.12.10",
-    "@ffmpeg/util": "^0.12.1",
-    "@ffmpeg/core-mt": "^0.12.6"
+    "next": "15.1.0",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "tailwindcss": "^3.4.1",
     "postcss": "^8",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0"
   }
 }
